test/corpus/query.txt
================================================================================
For elipsis middle
================================================================================

for (...; i <= 1;...){
    ...
}

--------------------------------------------------------------------------------

(source_file 
    (for_statement 
        (expression_statement 
            (ellipsis)
        ) 
        (expression_statement 
            (binary_expression (identifier) (number_literal))
        ) 
        (ellipsis) 
        (block_statement (expression_statement (ellipsis)))
    )
)

================================================================================
For elipsis one with meta
================================================================================

for ($VAR;...){
}

--------------------------------------------------------------------------------

(source_file 
    (for_statement 
        (expression_statement (identifier)) 
        (expression_statement (ellipsis)) 
        (block_statement)))

================================================================================
Function one parameter
================================================================================

function $FNC(uint256 x) {}

--------------------------------------------------------------------------------

(source_file (function_definition (identifier) (parameter (type_name (primitive_type)) (identifier)) (function_body)))

================================================================================
Function any parameter
================================================================================

function $FNC(...) {}

--------------------------------------------------------------------------------

(source_file (function_definition (identifier) (ellipsis) (function_body)))

================================================================================
Function multi parameter
================================================================================

function $FNC(..., uint256 x, ...){}


--------------------------------------------------------------------------------

(source_file (function_definition (identifier) (ellipsis) (parameter (type_name (primitive_type)) (identifier)) (ellipsis) (function_body)))

================================================================================
Function any extra
================================================================================

function $FNC() ... {}

--------------------------------------------------------------------------------

(source_file 
    (function_definition 
        (identifier) 
        (ellipsis) 
        (function_body)
    )
)

================================================================================
Function visibility
================================================================================

function $FNC() ... external ... {}

--------------------------------------------------------------------------------

(source_file 
    (function_definition 
        (identifier) 
        (ellipsis) 
        (visibility) 
        (ellipsis) 
        (function_body)
    )
)
